--- a/ChangeLog
+++ b/ChangeLog
@@ -9,6 +9,10 @@
  - Fixed autoconf script to detect PAM on RH6.1
  - Added tests for libpwdb, and OpenBSD functions to autoconf
  - Released 1.2pre4
+
+ - Imported latest OpenBSD CVS code
+ - Updated README.openssh
+
 19991027
  - Adapted PAM patch.
  - Released 1.0pre2
