--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+19991029
+ - Renamed openssh* back to ssh* at request of Theo de Raadt
+ - Incorporated latest changes from OpenBSD's CVS
+ - Integrated Makefile patch from  Niels Kristian Bech Jensen <nkbj@image.dk>
+ - Integrated PAM env patch from Nalin Dahyabhai <nalin.dahyabhai@pobox.com>
+
 19991028
  - Further PAM enhancements.
    - Much cleaner
