1st attempt at RPM subpackages

--- a/ChangeLog
+++ b/ChangeLog
@@ -8,6 +8,7 @@
    - [rsa.c] bugfix: use correct size for memset()
    - [sshconnect.c] warn if announced size of modulus 'n' != real size
  - Added GNOME passphrase requestor (use --with-gnome-askpass)
+ - RPM build now creates subpackages
 
 19991108
  - Removed debian/ directory. This is now being maintained separately.
