--- a/README
+++ b/README
@@ -35,7 +35,6 @@ configuration files in /opt/openssh/etc, and so forth.
 Damien Miller <djm@ibs.com.au>
 Internet Business Solutions
 
-
 Credits - 
 
 The OpenBSD team
@@ -49,12 +48,12 @@ Niels Kristian Bech Jensen <nkbj@image.dk> - Makefile patches
 Miscellania - 
 
 This version of SSH is based upon code retrieved from the OpenBSD CVS
-repository on 1999-10-30 patched by Damien Miller <djm@ibs.com.au>,
-which in turn was based on the last free version of SSH released by
-Tatu Ylonen.
+repository on 1999-11-09 which in turn was based on the last free 
+version of SSH released by Tatu Ylonen.
 
-Code in helper.[ch] is Copyright 1999 Internet Business Solutions and
-is released under a X11-style license (see source file for details).
+Code in helper.[ch] and gnome-ssh-askpass.c is Copyright 1999 
+Internet Business Solutions and is released under a X11-style 
+license (see source files for details).
 
 (A)RC4 code in rc4.[ch] is Copyright 1999 Damien Miller. It too is
 under a X11-style license (see source file for details).
@@ -64,3 +63,5 @@ References -
 [1] http://www.cdrom.com/pub/infozip/zlib/
 [2] http://www.openssl.org/
 [3] http://www.kernel.org/pub/linux/libs/pam/
+[4] http://www.gnome.org/
+
