- [auth-rh-rsa.c] user/958: check ~/.ssh/known_hosts for rhosts-rsa, too    - [ssh.1] user/958: check ~/.ssh/known_hosts for rhosts-rsa, too    - [sshd.8] user/958: check ~/.ssh/known_hosts for rhosts-rsa, too

--- a/ssh.1
+++ b/ssh.1
@@ -93,6 +93,8 @@ or
 and if additionally the server can verify the client's
 host key (see 
 .Pa /etc/ssh/ssh_known_hosts
+and
+.Pa $HOME/.ssh/known_hosts
 in the
 .Sx FILES
 section), only then login is
