--- a/ChangeLog
+++ b/ChangeLog
@@ -1,7 +1,10 @@
 19991111
  - Added (untested) Entropy Gathering Daemon (EGD) support
  - Fixed fd leak
-
+ - Merged OpenBSD CVS changes:
+   - [auth-rh-rsa.c] user/958: check ~/.ssh/known_hosts for rhosts-rsa, too
+   - [ssh.1] user/958: check ~/.ssh/known_hosts for rhosts-rsa, too
+   - [sshd.8] user/958: check ~/.ssh/known_hosts for rhosts-rsa, too
 19991110
  - Merged several minor fixed:
    - ssh-agent commandline parsing
