--- a/ChangeLog
+++ b/ChangeLog
@@ -10,7 +10,7 @@
 
 19991111
  - Added (untested) Entropy Gathering Daemon (EGD) support
- - Fixed fd leak
+ - Fixed /dev/urandom fd leak (Debian bug #49722)
  - Merged OpenBSD CVS changes:
    - [auth-rh-rsa.c] user/958: check ~/.ssh/known_hosts for rhosts-rsa, too
    - [ssh.1] user/958: check ~/.ssh/known_hosts for rhosts-rsa, too
@@ -32,7 +32,7 @@
    readability
 
 19991110
- - Merged several minor fixed:
+ - Merged several minor fixes:
    - ssh-agent commandline parsing
    - RPM spec file now installs ssh setuid root
    - Makefile creates libdir
