--- a/TODO
+++ b/TODO
@@ -4,8 +4,10 @@
 
 - Better documentation
 
-- Port to other platforms
+- Port to other platforms (Finish Solaris support)
 
 - Fix paths in manpages using autoconf
 
 - Enable libwrap support using autoconf switch
+
+- Better testing on non-PAM systems
