--- a/ChangeLog
+++ b/ChangeLog
@@ -26,6 +26,7 @@
  - Merged more Solaris compability from Marc G. Fournier
    <marc.fournier@acadiau.ca>
  - Wrote autoconf tests for __progname symbol
+ - RPM spec file fixes from Jim Knoble <jmknoble@pobox.com>
 
 19991114
  - Solaris compilation fixes (still imcomplete)
