--- a/README
+++ b/README
@@ -53,6 +53,7 @@ Phil Hands <phil@hands.com> - Debian scripts, assorted patches
 Niels Kristian Bech Jensen <nkbj@image.dk> - Makefile patches
 Marc G. Fournier <marc.fournier@acadiau.ca> - Solaris patches
 Thomas Neumann <tom@smart.ruhr.de> - Shadow passwords
+Jim Knoble <jmknoble@pobox.com> - RPM spec file fixes
 
 Miscellania - 
 
