--- a/INSTALL
+++ b/INSTALL
@@ -83,6 +83,11 @@ whatever you specified as your --sysconfdir (/usr/local/etc by default).
 The default configuration should be instantly usable, though you should 
 review it to ensure that it matches your security requirements.
 
+To generate a host key, issue the following command: (replacing
+/etc/ssh/ssh_host_key with an appropriate path)
+
+/usr/bin/ssh-keygen -b 1024 -f /etc/ssh/ssh_host_key -N ''
+
 For more information on configuration, please refer to the manual pages 
 for sshd, ssh and ssh-agent.
 
