--- a/README
+++ b/README
@@ -47,10 +47,9 @@ Credits -
 The OpenBSD team
 'jonchen' - the original author of PAM support of SSH
 Dan Brosemer <odin@linuxfreak.com> - Autoconf and build fixes & Debian scripts
-Niels Kristian Bech Jensen <nkbj@image.dk> - Makefile patch
 Nalin Dahyabhai <nalin.dahyabhai@pobox.com> - PAM environment patch
 Phil Hands <phil@hands.com> - Debian scripts, assorted patches
-Niels Kristian Bech Jensen <nkbj@image.dk> - Makefile patches
+Niels Kristian Bech Jensen <nkbj@image.dk> - Assorted patches
 Marc G. Fournier <marc.fournier@acadiau.ca> - Solaris patches
 Thomas Neumann <tom@smart.ruhr.de> - Shadow passwords
 Jim Knoble <jmknoble@pobox.com> - RPM spec file fixes
