--- a/README
+++ b/README
@@ -30,7 +30,8 @@ need to install EGD[1].
 There is now a mailing list for this port of OpenSSH. To
 subscribe, send a message consisting of the word 'SUBSCRIBE' to
 openssh-unix-dev-request@mindrot.org. This mailing list is intended
-for developers.
+for developers who wish to improve on this port or extend it to other
+Unices.
 
 Please refer to the INSTALL document for information on how to install
 OpenSSH on your system.
