--- a/ssh-add.1
+++ b/ssh-add.1
@@ -19,7 +19,7 @@
 .Nd adds identities for the authentication agent
 .Sh SYNOPSIS
 .Nm ssh-add
-.Op Fl ldD
+.Op Fl lLdD
 .Op Ar
 .Sh DESCRIPTION 
 .Nm
@@ -41,7 +41,9 @@ to work.
 The options are as follows:
 .Bl -tag -width Ds
 .It Fl l
-Lists all identities currently represented by the agent.
+Lists fingerprints of all identities currently represented by the agent.
+.It Fl L
+Lists public key parameters of all identities currently represented by the agent.
 .It Fl d
 Instead of adding the identity, removes the identity from the agent.
 .It Fl D
