--- a/ssh.1
+++ b/ssh.1
@@ -962,6 +962,9 @@ supports one-time password authentication with
 The libraries described in
 .Xr ssl 8
 are required for proper operation.
+.Pp
+OpenSSH has been created by Aaron Cambell, Bob Beck, Markus Friedl,
+Niels Provos, Theo de Raadt, and Dug Song.
 .Sh SEE ALSO
 .Xr rlogin 1 ,
 .Xr rsh 1 ,
